--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -23,6 +23,7 @@
         font-family: Proxima Nova, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
           sans-serif;
+        background-color: #f0efeff8;
       }
     </style>
   </head>
